--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,4 @@
 theme: jekyll-theme-minimal
+title: Welcome to my embedded electronics blog
+description: A place for me to store my findings and thoughts on developing commercial and home embedded systems.
+
